[tool.poetry]
name = "incolumepy.jwt-auth"
version = "1.0.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
license = "LICENSE"
packages=[
    {include = 'project', from=''},
]

[tool.poetry.dependencies]
python = "3.9.6"
Flask-Bcrypt = "^0.7.1"
Flask-Migrate = "^3.0.1"
Flask-Testing = "^0.8.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Script = "^2.0.6"

[tool.poetry.dev-dependencies]
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
